add gradle properties