@@ -3,12 +3,12 @@ package gof.structural.facade;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
 
 public class FacadeEverydayDemo {
 
 	public static void main(String[] args) throws IOException {
-		URL url = new URL("http://www.google.com");
+		var url = URI.create("http://www.google.com").toURL();
 
 		// Decorator pattern example
 		BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(url.openStream()));
