@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -129,7 +130,7 @@ public class Receiver {
     URLConnection urlCon = null;
     HttpURLConnection hurlc = null;
 
-    url = new URL(req_info);
+    url = URI.create(req_info).toURL();
     urlCon = url.openConnection();
     hurlc = (HttpURLConnection)urlCon;
     hurlc.setRequestMethod("POST");
